--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "prettier": "^3.0.0"
   },
   "engines": {
-    "node": ">=18"
+    "node": "20.x",
+    "pnpm": ">=9.0.0"
   },
+  "packageManager": "pnpm@9.15.4",
   "workspaces": [
     "apps/*",
     "packages/*",
