--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
     "prettier": "^3.0.0"
   },
   "engines": {
-    "node": "20.x",
-    "pnpm": ">=9.0.0"
+    "node": ">=18"
   },
-  "packageManager": "pnpm@9.15.4",
   "workspaces": [
     "apps/*",
     "packages/*",
