--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,10 @@
 {
   "name": "web",
   "version": "0.1.0",
+  "engines": {
+    "node": "20.x"
+  },
+  "packageManager": "pnpm@9.15.4",
   "private": true,
   "scripts": {
     "dev": "next dev",
