--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
     "framework": "nextjs",
-    "buildCommand": "next build"
+    "installCommand": "corepack enable pnpm && pnpm install",
+    "buildCommand": "turbo run build --filter=web"
 }
