--- a/turbo.json
+++ b/turbo.json
@@ -19,5 +19,11 @@
             "cache": false,
             "persistent": true
         }
-    }
+    },
+    "globalEnv": [
+        "NEXT_PUBLIC_SUPABASE_URL",
+        "NEXT_PUBLIC_SUPABASE_ANON_KEY",
+        "SUPABASE_SERVICE_ROLE_KEY",
+        "ENABLE_COREPACK"
+    ]
 }
