--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "prettier": "^3.0.0"
   },
   "engines": {
-    "node": ">=20",
-    "pnpm": ">=9"
+    "node": ">=20"
   },
   "packageManager": "pnpm@9.15.4"
 }
